# WAeasi

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
bootloader/limine/: README.md
builder/: Cargo.toml
builder/src/: digest.rs  error.rs  fs.rs  lib.rs  main.rs  manifest.rs  pipeline.rs
builder/src/stages/: aot.rs  bundle.rs  componentize.rs  compose.rs  mod.rs  sign.rs  wizer.rs
components/healthz/: Cargo.toml
components/hello-world/: Cargo.toml
components/hello-world/src/: lib.rs
components/http-server/: Cargo.toml
components/manifest/: Cargo.toml
components/tls-terminator/: Cargo.toml
components/tls-terminator/src/: lib.rs
docs/: architecture.md  booting.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: allocator.rs  lib.rs  log_.rs  main.rs  mem.rs  panic_.rs
kernel/src/acpi/: hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  sdt.rs  xsdt.rs
kernel/src/admin/: handlers.rs  mod.rs  protocol.rs  server.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  boot.rs  boot32.rs  cpu.rs  cpuid.rs  cr.rs  exception.rs  gdt.rs  idt.rs  idt_dump.rs  interrupts.rs  mod.rs  msr.rs  per_cpu.rs  port.rs
kernel/src/arch/x86_64/smp/: ap_entry.rs  mod.rs  topology.rs  trampoline.rs
kernel/src/boot/: limine.rs  memmap.rs  mod.rs  multiboot2.rs
kernel/src/crypto/: argon2.rs  blake3.rs  chacha20.rs  chacha20poly1305.rs  ct.rs  hkdf.rs  hmac.rs  keccak.rs  mod.rs  poly1305.rs  sha256.rs  sha3.rs  sha512.rs  shake.rs  verify.rs  x25519.rs
kernel/src/crypto/aes/: aesni.rs  encrypt.rs  gcm.rs  key.rs  mod.rs
kernel/src/crypto/asn1/: der.rs  mod.rs  oid.rs
kernel/src/crypto/ed25519/: decompress.rs  field.rs  keypair.rs  mod.rs  point.rs  scalar.rs  tests.rs
kernel/src/crypto/ml_dsa/: mod.rs  params.rs
kernel/src/crypto/ml_kem/: decaps.rs  encaps.rs  kpke.rs  mod.rs  params.rs  poly.rs  sample.rs
kernel/src/crypto/tls/: alert.rs  handshake.rs  keys.rs  mod.rs  record.rs  state.rs
kernel/src/crypto/x509/: cert.rs  chain.rs  mod.rs  parser.rs  time.rs
kernel/src/debug/: mod.rs
kernel/src/debug/gdb/: mod.rs  packet.rs  protocol.rs  regs.rs  reply.rs
kernel/src/drivers/: console.rs  hpet.rs  mod.rs  pci.rs  serial.rs  timer.rs
kernel/src/drivers/block/: mod.rs
kernel/src/drivers/block/virtio_blk/: async_io.rs  mod.rs  request.rs
kernel/src/drivers/nic/: e1000.rs  mod.rs
kernel/src/drivers/nic/virtio_net/: header.rs  mod.rs  rx.rs  tx.rs
kernel/src/drivers/virtio/: descriptor.rs  features.rs  mod.rs  pci_transport.rs  queue.rs  ring.rs
kernel/src/fs/: inode.rs  memfs.rs  mod.rs  vfs.rs
kernel/src/http/: chunked.rs  mod.rs  parser.rs  radix.rs  response.rs  router.rs
kernel/src/http/h2/: frame.rs  mod.rs  priority.rs  push.rs  settings.rs  stream.rs
kernel/src/http/h2/hpack/: decoder.rs  dfa.rs  huffman.rs  huffman_table.rs  mod.rs  static_table.rs
kernel/src/ipc/: channel.rs  message.rs  mod.rs
kernel/src/jit/: codebuf.rs  labels.rs  mod.rs  runtime.rs
kernel/src/jit/asm/: alu.rs  branch.rs  call.rs  mod.rs  mov.rs  prologue.rs  reg.rs
kernel/src/jit/lower/: control.rs  locals.rs  memory.rs  mod.rs  numeric.rs
kernel/src/jit/regalloc/: mod.rs  scan.rs  spill.rs  state.rs
kernel/src/memory/: address.rs  demand.rs  frame_alloc.rs  heap.rs  linear_mem.rs  mod.rs  page_table.rs  paging.rs
kernel/src/memory/buddy/: magazine.rs  mod.rs  slab.rs  tree.rs
kernel/src/net/: arp.rs  ethernet.rs  icmp.rs  ip.rs  mld.rs  mod.rs  pmtu.rs  slaac.rs  sockaddr.rs  socket.rs  udp.rs
kernel/src/net/icmpv6/: echo.rs  error.rs  header.rs  mod.rs
kernel/src/net/ipv6/: addr.rs  extensions.rs  fragment.rs  header.rs  mod.rs
kernel/src/net/ndp/: advert.rs  cache.rs  mod.rs  redirect.rs  router.rs  solicit.rs
kernel/src/net/route/: lpm.rs  mod.rs  table.rs
kernel/src/net/tcp/: checksum.rs  mod.rs  options.rs  retransmit.rs  rxring.rs  segment.rs  state.rs
kernel/src/obs/: mod.rs
kernel/src/obs/metrics/: counter.rs  exposition.rs  gauge.rs  histogram.rs  mod.rs  registry.rs
kernel/src/obs/tracing/: level.rs  mod.rs  sink.rs  span.rs
kernel/src/sched/: executor.rs  mod.rs  priority.rs  queue.rs  reactor.rs  task.rs  waker.rs
kernel/src/security/: audit.rs  canary.rs  capability.rs  mod.rs  speculation.rs  wxn.rs
kernel/src/sync/: backoff.rs  mod.rs  mutex.rs  once.rs  spinlock.rs
kernel/src/wasi/: caps.rs  ctx.rs  errors.rs  mod.rs
kernel/src/wasi/preview2/: clocks.rs  filesystem.rs  io.rs  mod.rs  random.rs  sockets.rs
kernel/src/wasm/: engine.rs  hot_reload.rs  instance.rs  linker.rs  mod.rs  module.rs  store.rs  trap.rs
kernel/src/wasm/interp/: call_indirect.rs  control.rs  dispatch.rs  frame.rs  memory.rs  mod.rs  numeric.rs  opcode.rs  stack.rs  value.rs
kernel/src/wasm/parser/: code.rs  element.rs  imports.rs  leb128.rs  mod.rs  reader.rs  sections.rs  table.rs  types.rs
kernel/src/wasm/validator/: ctrl_flow.rs  mod.rs  stack.rs  type_check.rs
sdk/: README.md
sdk/go/: README.md  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/src/waeasi/: __init__.py
sdk/python/src/waeasi/cli/: __init__.py  commands.py  config.py  main.py  ui.py
sdk/python/src/waeasi/net/: __init__.py  fetch.py  limit.py  retry.py  sse_client.py
sdk/python/src/waeasi/runtime/: __init__.py  body.py  context.py  handler.py  headers.py  request.py  response.py
sdk/python/src/waeasi/wasi/: __init__.py  clocks.py  http.py  io.py  obs.py
sdk/python/src/waeasi/web/: __init__.py  auth.py  cors.py  errors.py  match.py  middleware.py  multipart.py  ratelimit.py  route.py  router.py  sse.py  validate.py
sdk/python/templates/handler/: README.md  pyproject.toml
sdk/python/templates/handler/src/__NAME__/: __init__.py  handler.py
sdk/typescript/: README.md  package.json  tsconfig.json
targets/: x86_64-waeasi.json
tools/runner/: Cargo.toml  qemu.ps1
tools/runner/src/: disk.rs  limine.rs  locate.rs  main.rs  qemu.rs  wadbg.rs
tools/wadbg/: Cargo.toml
tools/wadbg/src/: decode.rs  intlog.rs  main.rs  parse.rs  pretty.rs  resolve.rs
wit/: README.md
wit/waeasi/: types.wit  (+2 more)
(+83 files in other folders)
