[package]
name        = "kernel"
description = "WAeasi — bare-metal Wasm Microkernel"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
name       = "waeasi_kernel"
path       = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "waeasi"
path = "src/main.rs"

[features]
default       = ["smp", "virtio"]
smp           = []
virtio        = []
e1000         = []
trace-sched   = []
trace-wasm    = []
# Bring up the full init graph (crypto self-test, ACPI walk, SMP,
# drivers, Wasm engine, WASI, admin endpoint, scheduler bootstrap).
# Off by default: those subsystems are written but not yet verified
# end-to-end on QEMU and currently fault inside one of them.
full-init     = []

[dependencies]
spin             = { workspace = true }
linked_list_allocator = { workspace = true }
bitflags         = { workspace = true }
log              = { workspace = true }
volatile         = { workspace = true }
uart_16550       = { workspace = true }
pic8259          = { workspace = true }
pc-keyboard      = { workspace = true }
x86_64           = { workspace = true }
crossbeam-queue  = { workspace = true }
futures-util     = { workspace = true }
hashbrown        = { workspace = true }
lazy_static      = { workspace = true }
limine           = { workspace = true }

[build-dependencies]
