[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "waeasi"
version = "0.1.0"
description = "Official Python SDK for WAeasi components — write WASI-targeted handlers with the Fetch API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
authors = [{ name = "WAeasi maintainers" }]
keywords = ["waeasi", "wasm", "wasi", "component-model", "edge", "serverless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Operating System Kernels",
]
dependencies = [
    "componentize-py>=0.16.0",
    "cryptography>=43.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/waeasi/waeasi"
Issues   = "https://github.com/waeasi/waeasi/issues"

[project.scripts]
waeasi = "waeasi.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/waeasi"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/waeasi/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
